# rmm-cli

./: CHANGELOG.md  README.md  rmm.cabal  shell.nix
app/: Main.hs
lib/: ArgParse.hs  ConfigParser.hs  RtmAPI.hs  Types.hs
test/: RtmAPISpec.hs  Spec.hs
