cabal-version:      2.4
name:               rmm
version:            0.0.1.0
description:        RMM is a remember the milk cli companion
bug-reports:        https://github.com/dbalan/rmm/issues
license:            BSD-3-Clause
author:             Dhananjay Balan
maintainer:         mail@dbalan.in
copyright:          2021 @notmycommit
category:           Desktop, Web
extra-source-files: CHANGELOG.md

executable rmm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , text ^>=1.2.0.0
                    , optparse-applicative ^>=0.16.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
