cabal-version:      2.4
name:               rmm
version:            0.0.1.0
description:        RMM is a remember the milk cli companion
bug-reports:        https://github.com/dbalan/rmm/issues
license:            BSD-3-Clause
author:             Dhananjay Balan
maintainer:         mail@dbalan.in
copyright:          2021 @notmycommit
category:           Desktop, Web
extra-source-files: CHANGELOG.md

executable rmm
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , text ^>=1.2.0.0
                    , optparse-applicative ^>=0.16.1.0
                    , byline ^>=1.1.1
                    , rmm-lib
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite rmm-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    RtmAPISpec
    hs-source-dirs:   test
    build-depends:    base ^>=4.14.1.0
                    , hspec ^>=2.8.2
                    , text
                    , rmm-lib
    default-language: Haskell2010

library rmm-lib
    exposed-modules:  RtmAPI
    build-depends:    base ^>=4.14.1.0
                    , text
                    , bytestring ^>=0.11.1.0
                    , cryptonite ^>=0.29
                    , req ^>=3.9.1
                    , sort
                    , aeson
                    , lens
                    , aeson-lens
    hs-source-dirs:   lib
    default-language: Haskell2010
